--- a/portfolios.html
+++ b/portfolios.html
@@ -12,7 +12,7 @@
     <div class="logo"><img src="./images/mentorspot.png" width="150px" alt="company logo"></div>
     <div id="menu">
         <ul>
-            <a href="landingpage.html"><li>Home</li></a>
+            <a href="index.html"><li>Home</li></a>
             <a href="#"><li>Portfolio</li></a>
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
@@ -22,16 +22,16 @@
         <div class="cards">
             <h1 class="porfolio">Testimonies of Changed Lives</h1>
             <div id="card1">
-                <a href="one on one session.html"><i class="fas fa-user-alt"></i></a>
+                <a href="onesession.html"><i class="fas fa-user-alt"></i></a>
                 <p>One On One Sessions</p></div>
             <div id="card2" >
-                <a href="group session.html"><i class="fas fa-users"></i></a>
+                <a href="groupsession.html"><i class="fas fa-users"></i></a>
                 <p>Group Discussions</p> </div>
             <div id="card3">
-                <a href="mentor pairing.html"><i class="fas fa-user-friends"></i></a>
+                <a href="mentorpairing.html"><i class="fas fa-user-friends"></i></a>
                 <p>Mentor Pairing</p></div>
             <div id="card4">
-                <a href="help kit.html"><i class="fas fa-people-carry"></i></a>
+                <a href="helpkit.html"><i class="fas fa-people-carry"></i></a>
                 <p>Help Kit</p>          
             </div>
         </div>
