--- a/helpkit.html
+++ b/helpkit.html
@@ -10,35 +10,6 @@
     <style>
         html {background: url(./images/help\ kit.jpg) center center no-repeat no-repeat fixed; background-size: cover;}
 
-        h2 {font-size: 40px;
-        height: 100px;
-        width: 400px;
-        line-height: 100px;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-        position: relative;
-        top: 50px;}
-
-        #help {width: 600px;
-        height: 700px;
-        position: fixed;
-        top: 200px;
-        left: 100px;
-        background-color: #EDBC81;
-        opacity: 30%;
-        border-radius: 20px;
-        }
-
-        #bodytext {position: fixed;
-        top: 220px;
-        width: 560px;
-        left: 120px;
-        color: white;}
-
-        #bodytext p {
-            font-size: 30px;
-        }
     </style>
 </head>
 <body>
@@ -53,9 +24,9 @@
     <i class="fas fa-bars"></i> 
     <h2>Help Kit</h2>
     <div id="help"></div>
-    <div id="bodytext">
+    <div id="bodytexts">
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum atque neque deserunt rem doloremque accusamus, sit dicta ullam nisi quos aliquid amet nobis officia nesciunt voluptatibus, reiciendis vitae assumenda possimus? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo minus dolorum consequuntur fugit ab quidem voluptatem assumenda commodi, temporibus voluptatibus quasi dicta maxime nesciunt esse sunt vero modi officia omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nam minus omnis quasi dolores architecto saepe repellat animi ullam dolor? Laudantium dolores enim repellendus. 
+        There's something for everyone here. You don't have to struggle alone when you can get a mentor. Life's journey is made easier through mentorship, and the programmes we offer are the best there is. There's a special help kit designed for every individual because everyone has unique needs. You don't have to be physically present at our sessions to be mentored–Our help kit takes care of that. All you need to do is text "GET HELP" to 34421 and you will be directed to a whole world of opportunities available in the programmes we offer. The 1000+ people that have gone through our programmes can testify to this. We encourage you to take that bold step today.  
     </p>
     
 </div>
