--- a/mentorpairing.html
+++ b/mentorpairing.html
@@ -7,45 +7,13 @@
     <link rel="shortcut icon" href="./images/mentorspot.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./CSS/all.css">
-    <style> figure,
-     video {
-            margin: 0 auto;
-            /* display: block; */
-            text-align: center;
-            top: 100px;
-        }
-     figure {
-         width: 900px;
-         position: fixed;
-         top: 200px;
-         left: 510px;
-     } 
-     h2 {font-size: 40px;
-        height: 100px;
-        width: 400px;
-        line-height: 100px;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-        position: relative;
-        top: 50px;} 
-
-        #bodytext {
-            background-color: #EDBC81;
-            padding: 10px;
-            font-size: 25px;
-            width: 800px;
-            margin: 0 auto;
-            text-align: center;
-        } 
-        
-    </style>
+    
 </head>
 <body>
     <div class="logo"><img src="./images/mentorspot.png" width="150px" alt="company logo"></div>
     <div id="menu">
         <ul>
-            <a href="landingpage.html"><li>Home</li></a>
+            <a href="index.html"><li>Home</li></a>
             <a href="#"><li>Portfolio</li></a>
             <a href="contact.html"><li>Contact</li></a>
         </ul>
@@ -53,7 +21,7 @@
     <i class="fas fa-bars"></i>
     <h2>Mentor Pairing</h2>
     <figure>
-        <video width="800px" controls autoplay muted>
+        <video width="800px" controls>
             <source src="./images/mentors.mp4" type="video/mp4">
         </video>
         <figcaption>
@@ -63,7 +31,7 @@
         <br>
         <div id="bodytext">
 <p>
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, maiores sapiente! Molestiae adipisci saepe quam repellendus temporibus, ea impedit nulla praesentium autem quae similique! Optio porro pariatur reprehenderit et eligendi nobis temporibus amet vel illo minima nulla, doloribus rerum eius quas voluptate ex. Quam error corrupti vitae.
+    We'll pair you with the right mentors. We have different programmes for mentor pairing, based on occupation, marital status, religion and age. Go to the Contact us page and fill in the appropriate details. This is essential in ensuring that the right choices are made for you. Wishing you a wonderful ride getting mentored.
         </div>
     </figure> 
     <footer>
