--- a/onesession.html
+++ b/onesession.html
@@ -7,96 +7,17 @@
     <link rel="shortcut icon" href="./images/mentorspot.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./CSS/all.css">
-    <style>
-      
-
-        #group1 {width: 700px;
-        padding: 10px;
-        min-width: 250px;
-        height: 300px;
-        float: left;
-        position: fixed;
-        left: 200px;
-        top: 200px;}
-
-        #group1 img {float: left;
-        padding-right: 1em;}
-
-        /* Pseudo element */
-        #group1::after {content: "";
-        clear: both;
-        display: table;}
-
-        #group2 {width: 700px;
-        padding: 10px;
-        min-width: 250px;
-        height: 300px;
-        float: right;
-        position: fixed;
-        left: 1000px;
-        top: 200px;}
-
-        #group2 img {float: left;
-        padding-right: 1em;}
-
-        /* Pseudo element */
-        #group2::after {content: "";
-        clear: both;
-        display: table;}
-
-        #group3 {width: 700px;
-        padding: 10px;
-        min-width: 250px;
-        height: 300px;
-        float: left;
-        position: fixed;
-        left: 200px;
-        top: 580px;}
-
-        #group3 img {float: right;
-        padding-left: 1em;}
-
-        /* Pseudo element */
-        #group3::after {content: "";
-        clear: both;
-        display: table;}
-
-        #group4 {width: 700px;
-        padding: 10px;
-        min-width: 250px;
-        height: 300px;
-        float: right;
-        position: fixed;
-        left: 1000px;
-        top: 580px;}
-
-        #group4 img {float: right;
-        padding-left: 1em;}
-
-        /* Pseudo element */
-        #group4::after {content: "";
-        clear: both;
-        display: table;}
-
-        img:hover {opacity: 30%;}
-
-        h2 {font-size: 40px;
-        height: 100px;
-        width: 400px;
-        line-height: 100px;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-        position: relative;
-        top: 50px;}
-
-        .alr {text-align: right;}
-        .all {text-align: left;}
-        
-
-    </style>
+   
 </head>
 <body>
+    <div class="logo"><img src="./images/mentorspot.png" width="150px" alt="company logo"></div>
+    <div id="menu">
+        <ul>
+            <a href="index.html"><li>Home</li></a>
+            <a href="#"><li>Portfolio</li></a>
+            <a href="contact.html"><li>Contact</li></a>
+        </ul>
+    </div>
     <h2>One on One Sessions</h2>
     <div class="wholesome">
         <div id="group1">
