--- a/schedule.html
+++ b/schedule.html
@@ -7,44 +7,6 @@
     <link rel="shortcut icon" href="./images/mentorspot.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./CSS/all.css">
-    <style>
-        table {
-            width:1000px;
-            position: relative;
-            top: 100px;
-            text-align: center;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        table, th, td {
-            border: 1px solid black;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 5px;
-            text-align: left;
-        }
-        table#t01 tr:nth-child(even) {
-            background-color: wheat;
-        }
-        table#t01 tr:nth-child(odd) {
-           background-color:#EDBC81;
-        }
-        table#t01 th {
-            background-color: black;
-            color: white;
-        }
-        h2 {font-size: 40px;
-        height: 100px;
-        width: 400px;
-        line-height: 100px;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-        position: relative;
-        top: 50px;}
-        </style>
-        
 </head>
 <body>
     <div class="logo"><img src="./images/mentorspot.png" width="150px" alt="company logo"></div>
@@ -65,78 +27,88 @@
         </tr>
         <tr>
           <td>One On One Sessions</td>
+          <td>October 2nd -7th, 2020</td>
+          <td>Surrey, Canada</td>
+        </tr>
+        <tr>
           <td>Group Sessions</td>
-          <td>Mentor Pairing</td>
+          <td>October 15th-20th, 2020</td>
+          <td>Vancouver, Canada</td>
         </tr>
         <tr>
-          <td>Eve</td>
-          <td>Jackson</td>
-          <td>94</td>
+          <td>One On One Sessions</td>
+          <td>November 1st-7th, 2020</td>
+          <td>Langley, Canada</td>
         </tr>
         <tr>
-          <td>John</td>
-          <td>Doe</td>
-          <td>80</td>
-        </tr>
-        <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>80</td>
+            <td>Group Sessions</td>
+            <td>November 12th-20th, 2020</td>
+            <td>Toronto, Canada</td>
           </tr>
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>80</td>
+            <td>One On One Sessions</td>
+            <td>November 15th-30th, 2020</td>
+            <td>Ontario, Canada</td>
           </tr>
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>80</td>
+            <td>Group Sessions</td>
+            <td>December 2nd-7th, 2020</td>
+            <td>Alberta, Canada</td>
           </tr>
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>80</td>
+            <td>One On One Sessions</td>
+            <td>December 12th-19th, 2020</td>
+            <td>Richmond, Canada</td>
           </tr>
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>80</td>
+            <td>Group Sessions</td>
+            <td>January 7th-12th, 2021</td>
+            <td>Coquitlam, Canada</td>
           </tr>
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>80</td>
+            <td>One On One Sessions</td>
+            <td>January 20th-26th, 2021</td>
+            <td>Nova Scotia, Canada</td>
           </tr>
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>80</td>
+            <td>Group Sessions</td>
+            <td>February 3rd-8th, 2021</td>
+            <td>White Rock, Canada</td>
           </tr>
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>80</td>
+            <td>One On One Sessions</td>
+            <td>February 14th-20th, 2021</td>
+            <td>Montreal, Canada</td>
           </tr>
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>80</td>
+            <td>Group Sessions</td>
+            <td>February 24th-28th, 2021</td>
+            <td>Ottawa, Canada</td>
           </tr>
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>80</td>
+            <td>One On One Sessions</td>
+            <td>March 5th-10th, 2021</td>
+            <td>Calgary, Canada</td>
           </tr>
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>80</td>
+            <td>Group Sessions</td>
+            <td>March 15th-20th, 2021</td>
+            <td>Edmonton, Canada</td>
           </tr>
           <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>80</td>
+            <td>One On One Sessions</td>
+            <td>March 25th-30th, 2021</td>
+            <td>Quebec, Canada</td>
+          </tr>
+          <tr>
+            <td>Group Sessions</td>
+            <td>April 7th-12th, 2021</td>
+            <td>Winnipeg, Canada</td>
+          </tr>
+          <tr>
+            <td>One On One Sessions</td>
+            <td>April 17th-23th, 2021</td>
+            <td>Victoria, Canada</td>
           </tr>
       </table>
       <footer>
