--- a/onesession.html
+++ b/onesession.html
@@ -14,27 +14,28 @@
     <div id="menu">
         <ul>
             <a href="index.html"><li>Home</li></a>
-            <a href="#"><li>Portfolio</li></a>
+            <a href="portfolios.html"><li>Portfolio</li></a>
             <a href="contact.html"><li>Contact</li></a>
         </ul>
     </div>
+    <a href="javascript:void(0);" class="icon" onclick="toggleHamburger()"><i class="fas fa-bars"></i></a> 
     <h2>One on One Sessions</h2>
     <div class="wholesome">
         <div id="group1">
-            <img src="./images/one on one1.png" style="border-radius: 50%;" width="200px" ; height="200px" alt="twitter icon">
-            <p class="alr" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores cupiditate reiciendis deleniti, doloremque voluptate maxime delectus illum fugit tenetur animi, aliquam aliquid, laborum harum? Eveniet, quos dolores. Autem aliquam repellendus accusamus harum, officia non facilis, dignissimos sit, dicta quisquam animi? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem laborum quia recusandae alias facere, magni consectetur, delectus eaque fugiat tenetur iure temporibus dolores minus quasi itaque amet odit nemo est? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae consequatur eius illo possimus, eligendi ipsa modi voluptatibus doloribus in accusantium consectetur temporibus enim exercitationem sint rerum nam ducimus necessitatibus laboriosam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt perspiciatis explicabo temporibus consectetur, optio placeat iure aliquid architecto rerum! Molestiae illum suscipit nobis consequatur harum voluptate sunt quaerat dolorem incidunt!</p>
+            <img src="./images/one on one1.png" style="border-radius: 50%;"  alt="one on one session1">
+            <p class="alr" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores cupiditate reiciendis deleniti, doloremque voluptate maxime delectus illum fugit tenetur animi, aliquam aliquid, laborum harum? Eveniet, quos dolores. Autem aliquam repellendus accusamus harum, officia non facilis, dignissimos sit, dicta quisquam animi? Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
         </div>
         <div id="group2">
-            <img src="./images/one on one2.jpg" style="border-radius: 50%;" width="200px" ; height="200px" alt="facebook logo" class="circle2">
-            <p class="alr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius temporibus pariatur, blanditiis consequatur natus qui ipsum similique incidunt magnam dicta molestias repudiandae sit nobis, quaerat doloribus quasi beatae architecto earum. Delectus suscipit quo fugit, numquam ducimus aliquid maiores aliquam exercitationem? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem saepe reiciendis animi eveniet. Quisquam vitae iste sed alias ullam at debitis dolor, veritatis ducimus aliquid incidunt repellat, pariatur quam recusandae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut dicta deserunt excepturi deleniti porro magnam laboriosam, in impedit dolor ullam repudiandae quae necessitatibus natus perspiciatis alias ab nostrum accusantium exercitationem? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur exercitationem maxime, ducimus tenetur corrupti quasi veniam doloribus consequuntur assumenda consectetur cupiditate dicta praesentium labore odio laudantium quas, repudiandae minus vero?</p>
+            <img src="./images/one on one2.jpg" style="border-radius: 50%;"  alt="one on one session2" class="circle2">
+            <p class="alr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius temporibus pariatur, blanditiis consequatur natus qui ipsum similique incidunt magnam dicta molestias repudiandae sit nobis, quaerat doloribus quasi beatae architecto earum. Delectus suscipit quo fugit, numquam ducimus aliquid maiores aliquam exercitationem? Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
         </div>
         <div id="group3">
-            <img src="./images/one on one3.jpg" style="border-radius: 50%;" width="200px" ; height="200px" alt="starbucks">
-            <p class="all">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nostrum dolorem accusantium libero! Fugit laboriosam placeat temporibus, facilis quaerat non autem minus fuga incidunt hic officia dolorum soluta illo veniam recusandae mollitia ex nam, ullam maxime modi dignissimos, aspernatur eos. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati a fugiat velit, at tempore. Nam eveniet, dignissimos eaque non vitae pariatur quae accusantium tempora ex, quis delectus ducimus hic. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quos, nisi veniam corporis laudantium provident nostrum perspiciatis nesciunt, officiis cum enim minima? Voluptatibus aut doloremque repellat possimus, impedit ea quos? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas eligendi reiciendis vero animi numquam qui quidem magnam mollitia obcaecati rerum, ex, omnis non autem cupiditate. Ea placeat similique hic consectetur?</p>
+            <img src="./images/one on one3.jpg" style="border-radius: 50%;" alt="one on one session3">
+            <p class="all">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nostrum dolorem accusantium libero! Fugit laboriosam placeat temporibus, facilis quaerat non autem minus fuga incidunt hic officia dolorum soluta illo veniam recusandae mollitia ex nam, ullam maxime modi dignissimos, aspernatur eos. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati a fugiat velit.  </p>
         </div>
         <div id="group4">
-            <img src="./images/one on one4.jpg" style="border-radius: 50%;" width="200px" ; height="200px" alt="google logo">
-            <p class="all">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus amet nemo facilis architecto delectus inventore accusamus saepe, aut non recusandae dolor, culpa commodi. Ut temporibus eum nemo ratione architecto! Fugit eos illo tempore nisi ducimus laborum quo itaque fuga perferendis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora, officiis corporis. Ex, animi qui, recusandae error id beatae quidem ullam nemo a repudiandae deserunt minus. Dignissimos tempore ullam libero deleniti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laborum sint libero aliquam ut, earum rerum mollitia nisi sed culpa, sequi veritatis assumenda commodi ullam quaerat quae accusantium dolores veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut alias autem animi non maiores adipisci eius sed. Nihil, asperiores, veritatis facere, est excepturi qui quod nam quidem dolorum quis nemo.</p>
+            <img src="./images/one on one4.jpg" style="border-radius: 50%;"  alt="one on one session4">
+            <p class="all">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus amet nemo facilis architecto delectus inventore accusamus saepe, aut non recusandae dolor, culpa commodi. Ut temporibus eum nemo ratione architecto! Fugit eos illo tempore nisi ducimus laborum quo itaque fuga perferendis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora, officiis corporis.  </p>
         </div>
     </div>
     <footer>
@@ -44,6 +45,16 @@
         <a href="https://www.pinterest.com/ebunolaniyan/_saved/"><i class="fab fa-pinterest-square"></i></a>
         </div>
         <p>&copy;Ebun Olaniyan 2020. All rights reserved.</p>
-     </footer>    
+     </footer> 
+     <script>
+        function toggleHamburger() {
+            let x = document.getElementById("menu");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+    </script>     
 </body>
 </html>
