--- a/schedule.html
+++ b/schedule.html
@@ -12,7 +12,7 @@
     <div class="logo"><img src="./images/mentorspot.png" width="150px" alt="company logo"></div>
     <div id="menu">
         <ul>
-           <a href="#"><li>Home</li></a>
+           <a href="index.html"><li>Home</li></a>
            <a href="portfolios"><li>Portfolio</li></a>
            <a href="contact"><li>Contact</li></a>
         </ul>
