--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,15 @@
 
 <body>
     <div class="logo"><img src="./images/mentorspot.png" width="150px" alt="company logo"></div>
+    <a href="#" class="active">Contact Us</a>
     <div id="menu">
         <ul>
             <a href="index.html"><li>Home</li></a>
-            <a href="#"><li>Portfolio</li></a>
-            <a href="contact.html"><li>Contact Us</li></a>
+            <a href="portfolios.html"><li>Portfolio</li></a>
+            <a href="#"><li>Contact Us</li></a>
         </ul>
     </div>
-    <i class="fas fa-bars"></i>
+    <a href="javascript:void(0);" class="icon" onclick="toggleHamburger()"><i class="fas fa-bars"></i></a>
     <div id="covered"></div>
     <form action="mailto:ebunubi@yahoo.com" enctype="text/plain">
         <fieldset>
@@ -81,5 +82,15 @@
         </div>
         <p>&copy;Ebun Olaniyan 2020. All rights reserved.</p>
      </footer>
+     <script>
+        function toggleHamburger() {
+            let x = document.getElementById("menu");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+    </script>
 </body>
 </html>
