--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <source src="./images/web background.mp4" type="video/mp4">
     </video> 
     <div class="logo"><img src="./images/mentorspot.png" width="150px" alt="company logo"></div>
+    <a href="#" class="active">Home</a>
     <div id="menu">
         <ul>
            <a href="#"><li>Home</li></a>
@@ -20,7 +21,7 @@
            <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </div>
-    <i class="fas fa-bars"></i>
+    <a href="javascript:void(0);" class="icon" onclick="toggleHamburger()"><i class="fas fa-bars"></i></a>
      <div id="main">
          <h1 class="landing">Get Mentored.</h1>
          <p class="middle">Get ahead of the game with a life coach</p>
@@ -36,5 +37,15 @@
         </div>
         <p>&copy;Ebun Olaniyan 2020. All rights reserved.</p>
      </footer>
+     <script>
+        function toggleHamburger() {
+            let x = document.getElementById("menu");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+    </script>
 </body>
 </html>
