--- a/mentorpairing.html
+++ b/mentorpairing.html
@@ -14,14 +14,14 @@
     <div id="menu">
         <ul>
             <a href="index.html"><li>Home</li></a>
-            <a href="#"><li>Portfolio</li></a>
+            <a href="portfolios.html"><li>Portfolio</li></a>
             <a href="contact.html"><li>Contact</li></a>
         </ul>
     </div>
-    <i class="fas fa-bars"></i>
+    <a href="javascript:void(0);" class="icon" onclick="toggleHamburger()"><i class="fas fa-bars"></i></a>
     <h2>Mentor Pairing</h2>
     <figure>
-        <video width="800px" controls>
+        <video controls>
             <source src="./images/mentors.mp4" type="video/mp4">
         </video>
         <figcaption>
@@ -41,6 +41,16 @@
         <a href="https://www.pinterest.com/ebunolaniyan/_saved/"><i class="fab fa-pinterest-square"></i></a>
         </div>
         <p>&copy;Ebun Olaniyan 2020. All rights reserved.</p>
-     </footer>   
+     </footer> 
+     <script>
+        function toggleHamburger() {
+            let x = document.getElementById("menu");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+    </script>  
 </body>
 </html>
