--- a/portfolios.html
+++ b/portfolios.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="logo"><img src="./images/mentorspot.png" width="150px" alt="company logo"></div>
+    <a href="#" class="active">Portfolio</a>
     <div id="menu">
         <ul>
             <a href="index.html"><li>Home</li></a>
@@ -17,7 +18,7 @@
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </div>
-    <i class="fas fa-bars"></i>
+    <a href="javascript:void(0);" class="icon" onclick="toggleHamburger()"><i class="fas fa-bars"></i></a>
     <div class="portfolio">
         <div class="cards">
             <h1 class="porfolio">Testimonies of Changed Lives</h1>
@@ -45,6 +46,16 @@
             <a href="https://www.pinterest.com/ebunolaniyan/_saved/"><i class="fab fa-pinterest-square"></i></a>
             </div>
             <p>&copy;Ebun Olaniyan 2020. All rights reserved.</p>
-         </footer>     
+         </footer> 
+         <script>
+            function toggleHamburger() {
+                let x = document.getElementById("menu");
+                if (x.style.display === "block") {
+                    x.style.display = "none";
+                } else {
+                    x.style.display = "block";
+                }
+            }
+        </script>    
 </body>
 </html>
