--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <source src="./images/web background.mp4" type="video/mp4">
     </video> 
     <div class="logo"><img src="./images/mentorspot.png" width="150px" alt="company logo"></div>
-    <a href="#" class="active">Home</a>
+   
     <div id="menu">
         <ul>
            <a href="#"><li>Home</li></a>
@@ -23,7 +23,7 @@
     </div>
     <a href="javascript:void(0);" class="icon" onclick="toggleHamburger()"><i class="fas fa-bars"></i></a>
      <div id="main">
-         <h1 class="landing">Get Mentored.</h1>
+         <h1 class="landing">Get <span style="color: wheat;">Mentored</span>.</h1>
          <p class="middle">Get ahead of the game with a life coach</p>
          <a href="schedule.html"><p class="button">Click Here</p></a>
      </div> 
