--- a/mentorpairing.html
+++ b/mentorpairing.html
@@ -21,7 +21,7 @@
     <a href="javascript:void(0);" class="icon" onclick="toggleHamburger()"><i class="fas fa-bars"></i></a>
     <h2>Mentor Pairing</h2>
     <figure>
-        <video controls>
+        <video controls class="vid">
             <source src="./images/mentors.mp4" type="video/mp4">
         </video>
         <figcaption>
