--- a/groupsession.html
+++ b/groupsession.html
@@ -22,10 +22,10 @@
     <a href="javascript:void(0);" class="icon" onclick="toggleHamburger()"><i class="fas fa-bars"></i></a>
     <h2>Group Sessions</h2>
     <div id="first">
-        <img src="images/group session1.jpg" alt="group session1" width="500px">
+        <img src="images/group session1.jpg" alt="group session1">
     <p class="pfirst">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita porro molestiae sint provident obcaecati perspiciatis vel, voluptatum doloremque id cumque autem odit neque nobis ea cupiditate dolorum recusandae explicabo omnis corporis, unde at repellat? Consequuntur maiores asperiores animi vero reiciendis numquam sapiente expedita sit? Earum laboriosam vero architecto unde blanditiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, facere fuga. Magni nihil dolorum molestias incidunt nesciunt totam inventore.  </p>    </div>
     <div id="second">
-        <img src="images/group session2.jpeg" alt="group session2" width="500px">
+        <img src="images/group session2.jpeg" alt="group session2">
     <p class="psecond">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, quo labore? Inventore perspiciatis eum officia nemo illum pariatur obcaecati repellat. Harum vitae, quia laboriosam eius consequatur sequi assumenda exercitationem voluptatibus sit hic id animi placeat minus repellat, velit aliquid soluta maiores dolores autem amet? Optio, exercitationem assumenda um officia nemo.  </p>    </div>
     <footer>
         <div id="socialmedia"></div>
