--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="./images/mentorspot.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./CSS/all.css">
+    <link href="https://fonts.googleapis.com/css2?family=Aladin&display=swap" rel="stylesheet">
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
@@ -23,7 +24,7 @@
     </div>
     <a href="javascript:void(0);" class="icon" onclick="toggleHamburger()"><i class="fas fa-bars"></i></a>
      <div id="main">
-         <h1 class="landing">Get <span style="color: wheat;">Mentored</span>.</h1>
+         <h1 class="landing">Get <span style="color: #EDBC81;">Mentored</span>.</h1>
          <p class="middle">Get ahead of the game with a life coach</p>
          <a href="schedule.html"><p class="button">Click Here</p></a>
      </div> 
