--- a/portfolios.html
+++ b/portfolios.html
@@ -12,9 +12,9 @@
     <div class="logo"><img src="./images/mentorspot.png" width="150px" alt="company logo"></div>
     <div id="menu">
         <ul>
-            <a href="index.html"><li>Home</li></a>
-            <a href="#"><li>Portfolio</li></a>
-            <a href="contact.html"><li>Contact Us</li></a>
+           <a href="index.html"><li>Home</li></a>
+           <a href="portfolios.html"><li>Portfolio</li></a>
+           <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="toggleHamburger()"><i class="fas fa-bars"></i></a>
@@ -55,6 +55,6 @@
                     x.style.display = "block";
                 }
             }
-        </script>    
+        </script> 
 </body>
 </html>
