--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--This is the "Contact Us" page containing my form sheet and audio file. Date: 02/10/2020. Ebunoluwa Olaniyan. Student Number: 504-219595-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,6 +74,9 @@
         </div>
         </fieldset>
     </form>
+    <!--this is for the audio-->
+    <audio controls src="./images/mixkit-raising-me-higher-34.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.</audio> 
     <footer>
         <div id="socialmedia"></div>
         <a href="https://www.instagram.com/ebuniyan/?hl=en"><i class="fab fa-instagram-square"></i></a>
