--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--This is my Landing page. The button on it redirects to "Schedule Page". Date: 02/10/2020. Ebunoluwa Olaniyan. Student Number: 504-219595-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,8 @@
 <body>
     <video autoplay muted loop id="myVideo">
         <source src="./images/web background.mp4" type="video/mp4">
-    </video> 
+    </video>
+    
     <div class="logo"><img src="./images/mentorspot.png" width="150px" alt="company logo"></div>
    
     <div id="menu">
