--- a/portfolios.html
+++ b/portfolios.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--This is the "Portfolio" page. The image icons on it link to four other pages. Date: 02/10/2020. Ebunoluwa Olaniyan. Student Number: 504-219595-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
