--- a/mentorpairing.html
+++ b/mentorpairing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--This is the "Mentor Pairing" page containing my video. Date: 02/10/2020. Ebunoluwa Olaniyan. Student Number: 504-219595-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
     <a href="javascript:void(0);" class="icon" onclick="toggleHamburger()"><i class="fas fa-bars"></i></a>
     <h2>Mentor Pairing</h2>
     <figure>
-        <video controls class="vid">
+        <video controls autoplay class="vid">
             <source src="./images/mentors.mp4" type="video/mp4">
         </video>
         <figcaption>
