--- a/onesession.html
+++ b/onesession.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--This is the "One On One Sessions" page linked from the icon on the Portfolio page. Date: 02/10/2020. Ebunoluwa Olaniyan. Student Number: 504-219595-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
