--- a/groupsession.html
+++ b/groupsession.html
@@ -28,7 +28,7 @@
         <img src="images/group session2.jpeg" alt="group session2">
     <p class="psecond">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, quo labore? Inventore perspiciatis eum officia nemo illum pariatur obcaecati repellat. Harum vitae, quia laboriosam eius consequatur sequi assumenda exercitationem voluptatibus sit hic id animi placeat minus repellat, velit aliquid soluta maiores dolores autem amet? Optio, exercitationem assumenda um officia nemo.  </p>    </div>
     <footer>
-        <div id="socialmedia"></div>
+        <div id="socialmedia">
         <a href="https://www.instagram.com/ebuniyan/?hl=en"><i class="fab fa-instagram-square"></i></a>
         <a href="https://www.facebook.com/ebunubi"><i class="fab fa-facebook-square"></i></a>
         <a href="https://www.pinterest.com/ebunolaniyan/_saved/"><i class="fab fa-pinterest-square"></i></a>
