--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      
      <img src="./images/Ebcopy.png" alt="eb" width="800px" height="800px" class="model">
      <footer>
-        <div id="socialmedia"></div>
+        <div id="socialmedia">
         <a href="https://www.instagram.com/ebuniyan/?hl=en"><i class="fab fa-instagram-square"></i></a>
         <a href="https://www.facebook.com/ebunubi"><i class="fab fa-facebook-square"></i></a>
         <a href="https://www.pinterest.com/ebunolaniyan/_saved/"><i class="fab fa-pinterest-square"></i></a>
