--- a/onesession.html
+++ b/onesession.html
@@ -10,7 +10,7 @@
    
 </head>
 <body>
-    <div class="logo"><img src="./images/mentorspot.png" width="150px" alt="company logo"></div>
+    <div class="logo"><img src="./images/mentorspot.png"width="150px"alt="company logo"></div>
     <div id="menu">
         <ul>
             <a href="index.html"><li>Home</li></a>
@@ -22,24 +22,24 @@
     <h2>One on One Sessions</h2>
     <div class="wholesome">
         <div id="group1">
-            <img src="./images/one on one1.png" style="border-radius: 50%;"  alt="one on one session1">
+            <img src="./images/oneonone1.png"style="border-radius:50%;"alt="one on one session1">
             <p class="alr" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores cupiditate reiciendis deleniti, doloremque voluptate maxime delectus illum fugit tenetur animi, aliquam aliquid, laborum harum? Eveniet, quos dolores. Autem aliquam repellendus accusamus harum, officia non facilis, dignissimos sit, dicta quisquam animi? Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
         </div>
         <div id="group2">
-            <img src="./images/one on one2.jpg" style="border-radius: 50%;"  alt="one on one session2" class="circle2">
+            <img src="./images/oneonone2.jpg"style="border-radius:50%;"alt="one on one session2"class="circle2">
             <p class="alr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius temporibus pariatur, blanditiis consequatur natus qui ipsum similique incidunt magnam dicta molestias repudiandae sit nobis, quaerat doloribus quasi beatae architecto earum. Delectus suscipit quo fugit, numquam ducimus aliquid maiores aliquam exercitationem? Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
         </div>
         <div id="group3">
-            <img src="./images/one on one3.jpg" style="border-radius: 50%;" alt="one on one session3">
+            <img src="./images/oneonone3.jpg"style="border-radius:50%;"alt="one on one session3">
             <p class="all">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nostrum dolorem accusantium libero! Fugit laboriosam placeat temporibus, facilis quaerat non autem minus fuga incidunt hic officia dolorum soluta illo veniam recusandae mollitia ex nam, ullam maxime modi dignissimos, aspernatur eos. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati a fugiat velit.  </p>
         </div>
         <div id="group4">
-            <img src="./images/one on one4.jpg" style="border-radius: 50%;"  alt="one on one session4">
+            <img src="./images/oneonone4.jpg"style="border-radius:50%;" alt="one on one session4">
             <p class="all">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus amet nemo facilis architecto delectus inventore accusamus saepe, aut non recusandae dolor, culpa commodi. Ut temporibus eum nemo ratione architecto! Fugit eos illo tempore nisi ducimus laborum quo itaque fuga perferendis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora, officiis corporis.  </p>
         </div>
     </div>
     <footer>
-        <div id="socialmedia"></div>
+        <div id="socialmedia">
         <a href="https://www.instagram.com/ebuniyan/?hl=en"><i class="fab fa-instagram-square"></i></a>
         <a href="https://www.facebook.com/ebunubi"><i class="fab fa-facebook-square"></i></a>
         <a href="https://www.pinterest.com/ebunolaniyan/_saved/"><i class="fab fa-pinterest-square"></i></a>
