--- a/portfolios.html
+++ b/portfolios.html
@@ -39,7 +39,7 @@
         <div class="picture"><img src="./images/group picture.jpg" alt="group picture" width="700px" height="700px"></div>
         <div id="below"><h5>We are committed to putting a smile on your face and ensuring that your success in life is guaranteed.</h5></div>
         <footer>
-            <div id="socialmedia"></div>
+            <div id="socialmedia">
             <a href="https://www.instagram.com/ebuniyan/?hl=en"><i class="fab fa-instagram-square"></i></a>
             <a href="https://www.facebook.com/ebunubi"><i class="fab fa-facebook-square"></i></a>
             <a href="https://www.pinterest.com/ebunolaniyan/_saved/"><i class="fab fa-pinterest-square"></i></a>
