--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,6 @@
             Can we send you our newsletter?
             <br><input type="checkbox" id="yes" name="yes"><label for="yes">Yes</label>
             <br><input type="checkbox" id="no" name="no"><label for="ski">No</label>
-            </label>
             <br>
 
             <br>
@@ -70,15 +69,16 @@
             <br>File Upload
             <br><input type="file" name="fileupload" accept="image/*">
             <br><input class="buttonform" type="reset" name="reset" value="reset">
-            <br><input class="buttonform" type="submit" type="submit" value="submit">
+            <br><input class="buttonform" type="submit" value="submit">
         </div>
         </fieldset>
     </form>
     <!--this is for the audio-->
-    <audio controls src="./images/mixkit-raising-me-higher-34.mp3" type="audio/mpeg">
+    <audio controls>
+        <source src="./images/mixkit-raising-me-higher-34.mp3" type="audio/mpeg">
         Your browser does not support the audio element.</audio> 
     <footer>
-        <div id="socialmedia"></div>
+        <div id="socialmedia">
         <a href="https://www.instagram.com/ebuniyan/?hl=en"><i class="fab fa-instagram-square"></i></a>
         <a href="https://www.facebook.com/ebunubi"><i class="fab fa-facebook-square"></i></a>
         <a href="https://www.pinterest.com/ebunolaniyan/_saved/"><i class="fab fa-pinterest-square"></i></a>
