--- a/mentorpairing.html
+++ b/mentorpairing.html
@@ -35,7 +35,7 @@
         </div>
     </figure> 
     <footer>
-        <div id="socialmedia"></div>
+        <div id="socialmedia">
         <a href="https://www.instagram.com/ebuniyan/?hl=en"><i class="fab fa-instagram-square"></i></a>
         <a href="https://www.facebook.com/ebunubi"><i class="fab fa-facebook-square"></i></a>
         <a href="https://www.pinterest.com/ebunolaniyan/_saved/"><i class="fab fa-pinterest-square"></i></a>
